--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel jsx -d js -w"
+    "build": "babel jsx -d js -w --sourceMaps=true"
   },
   "author": "",
   "license": "ISC",
